fixed issue with spacing to the right of the hero image on large screens; edited readme

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,7 @@ footer {
 /* Hero Image */
 
 .hero-image {
-    height: 110vh;
+    height: 101vh;
     width: 100%;
     background: url('../images/armings_heroes.png') center no-repeat;
     background-size: cover;
